--- a/app/src/main/res/layout/activity_after_search.xml
+++ b/app/src/main/res/layout/activity_after_search.xml
@@ -61,6 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintBottom_toTopOf="@+id/frame_bottombar"
         tools:listitem="@layout/item_after_search" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
