--- a/app/src/main/res/layout/activity_search_2.xml
+++ b/app/src/main/res/layout/activity_search_2.xml
@@ -119,6 +119,7 @@
                 android:paddingLeft="20dp"
                 android:paddingTop="12dp"
                 android:text="최근 검색어"
+                android:visibility="gone"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 app:scale_height="280"
@@ -132,6 +133,7 @@
                 android:layout_marginStart="16dp"
                 android:background="#00ff0000"
                 android:paddingTop="1dp"
+                android:visibility="gone"
                 android:text="최근 검색 닫기"
 
                 app:scale_height="120"
