--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -44,7 +44,7 @@
                 app:scale_width="700" />
 
             <EditText
-                android:id="@+id/email"
+                android:id="@+id/email_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/loginaround"
@@ -58,7 +58,7 @@
                 app:scale_width="700" />
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/password_edittext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/loginaround"
@@ -72,7 +72,7 @@
                 app:scale_width="700" />
 
             <EditText
-                android:id="@+id/password2"
+                android:id="@+id/password2_edittext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/loginaround"
@@ -124,7 +124,7 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/loginB"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#D7EBEA"
