--- a/app/src/main/res/layout/activity_word_detail_3.xml
+++ b/app/src/main/res/layout/activity_word_detail_3.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -27,8 +28,6 @@
         app:titleTextAppearance="@style/Toolbar.TitleText">
     </androidx.appcompat.widget.Toolbar>
 
-
-
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -45,7 +44,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/white_box">
+                    android:background="@color/white">
                 <androidx.cardview.widget.CardView
                     android:id="@+id/term_explanation"
                     android:layout_width="match_parent"
